--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "firebase": "^9.8.1",
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
     "react": "18.1.0",
